add dropbox_api_token to .env.sample.

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 SLACKBOT_API_TOKEN=GET-YOUR-TOKEN-FROM-SLACK
+DROPBOX_API_TOKEN=GET-YOUR-TOKEN-FROM-DROPBOX
 STANZA_FILE_PATH=/data/techshack.io/stanza.dat
