add next phase code.

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
+[techshackd]
 SLACKBOT_API_TOKEN=GET-YOUR-TOKEN-FROM-SLACK
 DROPBOX_API_TOKEN=GET-YOUR-TOKEN-FROM-DROPBOX
 STANZA_FILE_PATH=/data/techshack.io/stanza.dat
+TWITTER_API_CONSUMER_KEY=GET-YOUR-TOKEN-FROM-TWITTER
+TWITTER_API_CONSUMER_SECRET=GET-YOUR-TOKEN-FROM-TWITTER
+TWITTER_API_ACCESS_TOKEN=GET-YOUR-TOKEN-FROM-TWITTER
+TWITTER_API_ACCESS_SECRET=GET-YOUR-TOKEN-FROM-TWITTER
