fix publish failed build.

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,22 @@
 [techshackd]
+HOSTS=YOUR,IP,LIST
+DOMAIN=techshack.soasme.com
 SLACKBOT_API_TOKEN=GET-YOUR-TOKEN-FROM-SLACK
 DROPBOX_API_TOKEN=GET-YOUR-TOKEN-FROM-DROPBOX
+HOME_PATH=/var/www/techshack.io
+ENV_PATH=/etc/techshack.io/env
+HTML_PATH=/var/www/techshack.io/html
+BIN_PATH=/var/www/techshack.io/venv/bin
 STANZA_FILE_PATH=/data/techshack.io/stanza.dat
+REMOTE_BACKUP_STANZA_FILE_PATH=/backup/stanza.dat
 TWITTER_API_CONSUMER_KEY=GET-YOUR-TOKEN-FROM-TWITTER
 TWITTER_API_CONSUMER_SECRET=GET-YOUR-TOKEN-FROM-TWITTER
 TWITTER_API_ACCESS_TOKEN=GET-YOUR-TOKEN-FROM-TWITTER
 TWITTER_API_ACCESS_SECRET=GET-YOUR-TOKEN-FROM-TWITTER
+TWITTER_USERNAME=YOUR-TWITTER-USERNAME
+DOUBAN_API_KEY=YOUR-TOKEN
+DOUBAN_API_SECRET=YOUR-KEY
+DOUBAN_API_SCOPE=douban_basic_common,shuo_basic_r,shuo_basic_w
+DOUBAN_USERNAME=YOUR-DOUBAN_NAME
+HLCK_BACKUP="curl -fsS --retry 3 $URL > /dev/null"
+HLCK_PUBLISH="curl -fsS --retry 3 $URL > /dev/null"
