add daily commands.

--- a/Pipfile
+++ b/Pipfile
@@ -12,10 +12,10 @@ mistune = "*"
 dropbox = "*"
 birdy = "*"
 douban-client = "*"
-"fabric3" = "==1.12.0.post1"
+"Fabric3" = "==1.12.0.post1"
 simplenote = "*"
 pelican = "*"
-markdown = "*"
+Markdown = "*"
 ghp-import = "*"
 click = "*"
 google-api-python-client = "*"
