--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
-python:
-    - "3.7.0"
+python: 3.7
+dist: xenial
+sudo: true
 install:
     - pip install pipenv==11.0.0
     - pipenv install
