--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ birdy = "*"
 douban-client = "*"
 "Fabric3" = "==1.12.0.post1"
 simplenote = "*"
-pelican = "3.7.1"
+pelican = "==3.7.1"
 Markdown = "*"
 ghp-import = "*"
 click = "*"
